@@ -108,6 +108,18 @@ int hydra_get_options(char *options[]) {
     options[i++] = "-d";
   }
 
+  /* COMPLETE HELP */
+  widget = lookup_widget(GTK_WIDGET(wndMain), "chkCompleteHelp");
+  if (gtk_toggle_button_get_active((GtkToggleButton *) widget)) {
+    options[i++] = "-h";
+  }
+
+  /* Service Module Usage Details */
+  widget = lookup_widget(GTK_WIDGET(wndMain), "chkServiceDetails");
+  if (gtk_toggle_button_get_active((GtkToggleButton *) widget)) {
+    options[i++] = "-U";
+  }
+
   /* use colon separated list? */
   widget = lookup_widget(GTK_WIDGET(wndMain), "chkColon");
   if (gtk_toggle_button_get_active((GtkToggleButton *) widget)) {
@@ -205,6 +217,12 @@ int hydra_get_options(char *options[]) {
   }
 
   /* exit after first found pair? */
+  /* per host */
+  widget = lookup_widget(GTK_WIDGET(wndMain), "chkExitf");
+  if (gtk_toggle_button_get_active((GtkToggleButton *) widget)) {
+    options[i++] = "-f";
+  }
+  /* global */
   widget = lookup_widget(GTK_WIDGET(wndMain), "chkExitf");
   if (gtk_toggle_button_get_active((GtkToggleButton *) widget)) {
     options[i++] = "-f";
